Fix triggering of an assertion, if a new tab is opened. Thanks to Frank Reininghaus for the detailed analyses!

BUG: 246747
FIXED-IN: 4.6.0


svn path=/trunk/KDE/kdebase/apps/; revision=1164862